# ghc

./: .gitmodules  .pre-commit-config.yaml  .tokeignore  CLAUDE.md  Cargo.toml  Makefile  README.md  _typos.toml  deny.toml
.github/workflows/: build.yml
crates/ghc/: Cargo.toml
crates/ghc-api/: Cargo.toml
crates/ghc-api/src/: auth_flow.rs  client.rs  errors.rs  features.rs  http.rs  lib.rs
crates/ghc-api/src/queries/: issue.rs  mod.rs  pr.rs  repo.rs  user.rs
crates/ghc-api/tests/: api_integration.rs
crates/ghc-api/tests/fixtures/: issue_list.json  pr_list.json  repo_view.json
crates/ghc-cmd/: Cargo.toml
crates/ghc-cmd/src/: factory.rs  lib.rs  test_helpers.rs  version.rs
crates/ghc-cmd/src/accessibility/: mod.rs
crates/ghc-cmd/src/actions/: mod.rs
crates/ghc-cmd/src/agent_task/: mod.rs
crates/ghc-cmd/src/alias/: delete.rs  imports.rs  list.rs  mod.rs  set.rs
crates/ghc-cmd/src/api/: mod.rs
crates/ghc-cmd/src/attestation/: download.rs  inspect.rs  mod.rs  trusted_root.rs  verify.rs
crates/ghc-cmd/src/auth/: git_credential.rs  login.rs  logout.rs  mod.rs  refresh.rs  setup_git.rs  status.rs  switch.rs  token.rs
crates/ghc-cmd/src/browse/: mod.rs
crates/ghc-cmd/src/cache/: delete.rs  list.rs  mod.rs
crates/ghc-cmd/src/codespace/: code.rs  create.rs  delete.rs  edit.rs  jupyter.rs  list.rs  logs.rs  mod.rs  ports.rs  rebuild.rs  ssh.rs  stop.rs  view.rs
crates/ghc-cmd/src/completion/: mod.rs
crates/ghc-cmd/src/config/: clear_cache.rs  get.rs  list.rs  mod.rs  set.rs
crates/ghc-cmd/src/copilot/: mod.rs
crates/ghc-cmd/src/extension/: browse.rs  create.rs  install.rs  list.rs  mod.rs  remove.rs  search.rs  upgrade.rs
crates/ghc-cmd/src/gist/: clone.rs  create.rs  delete.rs  edit.rs  list.rs  mod.rs  rename.rs  view.rs
crates/ghc-cmd/src/gpg_key/: add.rs  delete.rs  list.rs  mod.rs
crates/ghc-cmd/src/issue/: close.rs  comment.rs  create.rs  delete.rs  develop.rs  edit.rs  list.rs  lock.rs  mod.rs  pin.rs  reopen.rs  status.rs  transfer.rs  unlock.rs  unpin.rs  view.rs
crates/ghc-cmd/src/label/: clone.rs  create.rs  delete.rs  edit.rs  list.rs  mod.rs
crates/ghc-cmd/src/org/: list.rs  mod.rs
crates/ghc-cmd/src/pr/: checkout.rs  checks.rs  close.rs  comment.rs  create.rs  diff.rs  edit.rs  list.rs  lock.rs  merge.rs  mod.rs  ready.rs  reopen.rs  revert.rs  review.rs  status.rs  unlock.rs  update_branch.rs  view.rs
crates/ghc-cmd/src/preview/: mod.rs
crates/ghc-cmd/src/project/: close.rs  copy.rs  create.rs  delete.rs  edit.rs  field_create.rs  field_delete.rs  field_list.rs  item_add.rs  item_archive.rs  item_create.rs  item_delete.rs  item_edit.rs  item_list.rs  link.rs  list.rs  mark_template.rs  mod.rs  unlink.rs  view.rs
crates/ghc-cmd/src/release/: create.rs  delete.rs  delete_asset.rs  download.rs  edit.rs  list.rs  mod.rs  upload.rs  verify.rs  verify_asset.rs  view.rs
crates/ghc-cmd/src/repo/: archive.rs  autolink.rs  clone.rs  create.rs  delete.rs  deploy_key.rs  edit.rs  fork.rs  gitignore.rs  license.rs  list.rs  mod.rs  rename.rs  set_default.rs  sync.rs  unarchive.rs  view.rs
crates/ghc-cmd/src/ruleset/: check.rs  list.rs  mod.rs  view.rs
crates/ghc-cmd/src/run/: cancel.rs  delete.rs  download.rs  list.rs  mod.rs  rerun.rs  view.rs  watch.rs
crates/ghc-cmd/src/search/: code.rs  commits.rs  issues.rs  mod.rs  prs.rs  repos.rs
crates/ghc-cmd/src/secret/: delete.rs  list.rs  mod.rs  set.rs
crates/ghc-cmd/src/ssh_key/: add.rs  delete.rs  list.rs  mod.rs
crates/ghc-cmd/src/status/: mod.rs
crates/ghc-cmd/src/variable/: delete.rs  get.rs  list.rs  mod.rs  set.rs
crates/ghc-cmd/src/workflow/: disable.rs  enable.rs  list.rs  mod.rs  run.rs  view.rs
crates/ghc-core/: Cargo.toml
crates/ghc-core/src/: browser.rs  cmdutil.rs  errors.rs  export.rs  instance.rs  iostreams.rs  json.rs  keyring_store.rs  lib.rs  markdown.rs  prompter.rs  repo.rs  table.rs  test_utils.rs  text.rs
crates/ghc-core/src/config/: file_config.rs  memory_config.rs  mod.rs
crates/ghc-git/: Cargo.toml
crates/ghc-git/src/: client.rs  context.rs  credential.rs  errors.rs  lib.rs  remote.rs  url_parser.rs
crates/ghc/src/: main.rs
crates/ghc/tests/: parity.rs
docs/: architecture-review.md  cli-parity-test-report.md  feature-parity-report.md  index.md  parity-audit-report.md
specs/: README.md  architecture-design.md
