[package]
name = "ghc-api"
description = "HTTP client, GraphQL/REST API, and auth flow for GHC GitHub CLI"
readme = "../../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
ghc-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
regex.workspace = true
chrono.workspace = true
secrecy.workspace = true

[dev-dependencies]
rstest.workspace = true
wiremock.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
