[package]
name = "ghc-git"
description = "Git command wrapper and repository resolution for GHC GitHub CLI"
readme = "../../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
ghc-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
regex.workspace = true
tokio.workspace = true
which.workspace = true

[dev-dependencies]
rstest.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true
proptest.workspace = true
