[package]
name = "ghc"
description = "GitHub CLI written in Rust - feature-parity rewrite of the official gh CLI"
readme = "../../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ghc"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ghc-core.workspace = true
ghc-api.workspace = true
ghc-git.workspace = true
ghc-cmd.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
console.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
